test/bad/classes/struct02.px

class Struct def
    Int n: 0

r = Struct()
r.n = 1.0
